--- a/index.html
+++ b/index.html
@@ -4,18 +4,37 @@
         <title>Alura Plus</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <link rel="stylesheet" href="./style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <section class="banner-principal background-image">
-            <div>
-                <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-                <img src="./assets/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
+            <div class="banner-principal-box">
+                <h1 class="banner-principal-titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+                <img src="./assets/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua" class="banner-principal-imagem">
                 <a href="www.alura.com.br" class="button-primary">Assine por 12x de R$ 120,00*</a>
                 <a href="www.alura.com.br" class="button-secundary">Assinar somente o Alura+</a>
                 <p class="banner-principal-aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
             </div>
         </section>
+
+        <section class="container-secundario">
+            <img src="./assets/Plataformas.png" alt="Um monitor e um celular com o alura plus aberto" class="container-secundario-imagem">
+            <div class="container-secundario-texto">
+                <h2 class="container-secundario-titulo">Assista do seu jeito.</h2>
+                <p class="container-secundario-descricao">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+            </div>
+        </section>
+
+        <section class="container-secundario">
+            <div class="container-secundario-texto">
+                <p class="container-secundario-descricao">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+                <button class="button-primary">Assine o Combo+</button>
+            </div>
+            <img src="./assets/Telas.png" alt="Telas do alura e do alura língua" class="container-secundario-imagem">
+        </section>
+
     </body>
 </html>
