--- a/index.html
+++ b/index.html
@@ -36,5 +36,31 @@
             <img src="./assets/Telas.png" alt="Telas do alura e do alura língua" class="container-secundario-imagem">
         </section>
 
+        <section class="container-secundario">
+            <img src="./assets/Notebook.png" alt="Um notebook com uma página de cursos da alura aberto" class="container-secundario-imagem">
+            <div class="container-secundario-texto">
+                <h2 class="container-secundario-titulo">Baixe seus cursos</h2>
+                <p class="container-secundario-descricao">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+            </div>
+        </section>
+
+        <section class="dispositivos">
+            <h2 class="dispositivos-titulo">Disponível nos seus dispositivos favoritos</h2>
+            <ul class="dispositivos-lista">
+                <li>
+                    <img src="./assets/tv.png" alt="Ícone de televisão" class="lista-imagem">
+                    <h3 class="lista-titulo">TV</h3>
+                </li>
+                <li>
+                    <img src="./assets/computador.png" alt="Ícone de computador" class="lista-imagem">
+                    <h3 class="lista-titulo">Computadores</h3>
+                </li>
+                <li>
+                    <img src="./assets/celular.png" alt="Ícone de celular de tablet" class="lista-imagem">
+                    <h3 class="lista-titulo">Celulares e tabletes</h3>
+                </li>
+            </ul>
+        </section>
+
     </body>
 </html>
