--- a/index.html
+++ b/index.html
@@ -61,6 +61,31 @@
                 </li>
             </ul>
         </section>
-
     </body>
+
+    <footer class="rodape">
+        <img src="./assets/Logo.png" alt="logo do Alura Plus" class="rodape-logo" >
+        <ul class="rodape-lista">
+            <li class="lista-link">
+                <a href="#" class="link-item">Idioma</a>
+            </li>
+            <li class="lista-link">
+                <a href="#" class="link-item">Dispositivos compatíveis</a>
+            </li>
+            <li class="lista-link">
+                <a href="#" class="link-item">Politica de privacidade</a>
+            </li>
+            <li class="lista-link">
+                <a href="#" class="link-item">Proteção de dados no Brasil</a>
+            </li>
+            <li class="lista-link">
+                <a href="#" class="link-item">Anuncios personalizados</a>
+            </li>
+            <li class="lista-link">
+                <a href="#" class="link-item">Ajuda</a>
+            </li>
+        </ul>
+        <p class="rodape-texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+        <p class="rodape-texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+    </footer>
 </html>
